Improve meteo block adding a title

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -29,6 +29,7 @@
                             </div>
                         </div>
                         <div class="column">
+                            <p class="title is-block">Meteo</p>
                             <p>Temperatura {{forecastData.temperature}}</p>
                             <p>Possibilità di pioggia {{forecastData.rain_chance}}%</p>
                         </div>
